hphp/hack/test/typecheck/typed_locals/nested.php.exp
File "nested.php", line 8, characters 1-165:
Incomplete position information! We couldn't find the exact line of your type error in this definition. Please run `hh rage` and post in https://fb.workplace.com/groups/hackforhiphop/. (Typing[4110])
  File "", line 0, characters 0-0:
  Typing error
  File "nested.php", line 14, characters 15-17:
  Expected `int`
  File "nested.php", line 9, characters 22-23:
  But got `string`
File "nested.php", line 9, characters 3-24:
Typing error (Typing[4110])
  File "nested.php", line 14, characters 15-17:
  Expected `int`
  File "nested.php", line 9, characters 22-23:
  But got `string`
File "nested.php", line 17, characters 3-9:
Typing error (Typing[4110])
  File "nested.php", line 14, characters 15-17:
  Expected `int`
  File "nested.php", line 17, characters 8-9:
  But got `string`
